--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     Aperiam, sed dicta repudiandae ullam et doloremque quia reiciendis exercitationem possimus explicabo? Deserunt reprehenderit debitis id assumenda, cum a nemo ad autem suscipit iusto ratione ipsa. Nam, magnam. Fugit, neque?
     Laboriosam ab illum sit quisquam at maiores nam tempora, quos similique officiis eum tempore, architecto modi non. Quam optio iste harum, id ullam ducimus at expedita. Delectus perferendis molestiae ut!
     Totam iusto, illum reprehenderit atque perferendis commodi ducimus ut recusandae beatae repudiandae autem minus earum amet? Omnis corporis, reprehenderit nulla culpa unde cumque! Voluptatibus ullam reiciendis officia culpa similique iure!</p>
+
+    <script src="/script.js"></script>
     
 </body>
 </html>
